$Id: History,v 1.200 2002-10-24 15:33:10 johna Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     *************************************************************
     * Note that modeling and test have their own History files. *
     *************************************************************

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

History file for visualization category
---------------------------------------

17th October 2002  John Allison (vis-V04-01-03 with...)
- Coworking tags are:
    geant4/source/tracking       traj02
    geant4/source/intercoms      intercoms-V04-00-04
    geant4/source/graphics_reps  greps-V04-01-00
    geant4/source/digits+hits    hits-traj02
- More changes for AddThis(const G4VTrajectory&) and (const G4VHit&).
- Minor corrections to warning messages, etc.
- Improved end of run behaviour for non-post-processing graphics
  systems by changing false to true in G4VisManager::EndOfRun
  fpSceneHandler->SetMarkForClearingTransientStore(true);
- Further corrections/improvements in OpenGLWin32 - not yet complete.

17th October 2002  John Allison (vis-V04-01-02 with intercoms-V04-01-00)
- Added two new pure virtual functions to G4VGraphicsScene:
    AddThis(const G4VTrajectory&)
    AddThis(const G4VHit&)
