@@ -1,4 +1,4 @@
-$Id: History,v 1.200 2002-10-24 15:33:10 johna Exp $
+$Id: History,v 1.201 2002-10-28 11:14:56 johna Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -23,6 +23,9 @@ committal in the CVS repository !
 
 History file for visualization category
 ---------------------------------------
+
+Oct 28, 2002, J.Allison
+- Changed G4XXXSceneHandler.cc for map of G4AttDefs, and improved.
 
 17th October 2002  John Allison (vis-V04-01-03 with...)
 - Coworking tags are:
